fixed map sizing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   background-color: #242928;
@@ -7,7 +7,6 @@
 
 .map-container {
   flex:1;
-  max-height: 100vh;
 }
 
 #pac-input {
